--- a/bundle.yaml
+++ b/bundle.yaml
@@ -17514,6 +17514,18 @@ spec:
                   use ''image'' instead.  The image tag can be specified as part of
                   the image URL.'
                 type: string
+              terminationGracePeriodSeconds:
+                description: Optional duration in seconds the pod needs to terminate
+                  gracefully. May be decreased in delete request. Value must be non-negative
+                  integer. The value zero indicates stop immediately via the kill
+                  signal (no opportunity to shut down). If this value is nil, the
+                  default grace period will be used instead. The grace period is the
+                  duration in seconds after the processes running in the pod are sent
+                  a termination signal and the time when the processes are forcibly
+                  halted with a kill signal. Set this value longer than the expected
+                  cleanup time for your process. Defaults to 600 seconds.
+                format: int64
+                type: integer
               thanos:
                 description: "Thanos configuration allows configuring various aspects
                   of a Prometheus server in a Thanos environment. \n This section
